--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 
 Pods/*
 
-GitHubAwards.xcworkspace/xcuserdata/nunogoncalves.xcuserdatad/UserInterfaceState.xcuserstate
+OctoPodium.xcworkspace/xcuserdata/nunogoncalves.xcuserdatad/UserInterfaceState.xcuserstate
