Removing google analytics configuration file from version control

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Pods/*
 OctoPodium.xcworkspace/xcuserdata/nunogoncalves.xcuserdatad/UserInterfaceState.xcuserstate
 
 OctoPodium.xcodeproj/project.xcworkspace/xcuserdata/nunogoncalves.xcuserdatad/UserInterfaceState.xcuserstate
+
+OctoPodium/Supporting Files/GoogleService-Info.plist
