--- a/OctoPodium/Supporting Files/Info.plist
+++ b/OctoPodium/Supporting Files/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>twitter</string>
+        <string>tweetbot</string>
+        <string>twit</string>
+        <string>fluttr</string>
+        <string>icebird</string>
+        <string>simplytweet</string>
+        <string>tweetings</string>
+        <string>x-birdfeed</string>
+        <string>echofon</string>
+        <string>x-seesmic</string>
+    </array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
