--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ OctoPodium.xcodeproj/project.xcworkspace/xcuserdata/nunogoncalves.xcuserdatad/Us
 OctoPodium/Supporting Files/GoogleService-Info.plist
 
 build/*
+*.xcbkptlist
