--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   # - xcodebuild -workspace OctoPodium.xcworkspace -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO build test | xcpretty -c
   - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO build test | xcpretty -c
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -X xcodeplist
