--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@ language: swift
 xcode_workspace: OctoPodium.xcworkspace
 xcode_scheme: OctoPodium
 osx_image: xcode9.3beta
-
-# before_install:
-# - pod repo update
-
+before_install:
+  - pod repo update
 script:
-  # - xcodebuild -scheme OctoPodium -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' build test
-  # - xcodebuild -workspace OctoPodium.xcworkspace -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO build test | xcpretty -c
-  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO build test | xcpretty -c
+  # - cd Examples
+  # - xcodebuild -version
+  # - xcodebuild -project DynamicColorExample.xcodeproj -scheme iOSTests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" -configuration Release ONLY_ACTIVE_ARCH=YES -enableCodeCoverage YES test
+  # - bash <(curl -s https://codecov.io/bash) -cF ios
+
+  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -enableCodeCoverage YES GCC_GENERATE_TEST_COVERAGE_FILES=YES build test | xcpretty -c
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -X xcodeplist
+  - ls -la
+  - cat OctoPodium/Models/GithubCredentials.swift
+  - bash <(curl -s https://codecov.io/bash) -X xcodeplist -cF ios
