--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,7 @@ osx_image: xcode9.3beta
 before_install:
   - pod repo update
 script:
-  # - cd Examples
-  # - xcodebuild -version
-  # - xcodebuild -project DynamicColorExample.xcodeproj -scheme iOSTests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" -configuration Release ONLY_ACTIVE_ARCH=YES -enableCodeCoverage YES test
-  # - bash <(curl -s https://codecov.io/bash) -cF ios
-
-  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -enableCodeCoverage YES GCC_GENERATE_TEST_COVERAGE_FILES=YES build test | xcpretty -c
+  # - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator -enableCodeCoverage YES ONLY_ACTIVE_ARCH=YES VALID_ARCHS=x86_64 -derivedDataPath build GCC_GENERATE_TEST_COVERAGE_FILES=YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES build test | xcpretty -c
+  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -derivedDataPath build -enableCodeCoverage YES GCC_GENERATE_TEST_COVERAGE_FILES=YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES build test | xcpretty -c
 after_success:
-  - ls -la
-  - cat OctoPodium/Models/GithubCredentials.swift
-  - bash <(curl -s https://codecov.io/bash) -X xcodeplist -cF ios
+  - bash <(curl -s https://codecov.io/bash) -J 'OctoPodium'
