--- a/OctoPodium.xcodeproj/xcshareddata/xcschemes/OctoPodium.xcscheme
+++ b/OctoPodium.xcodeproj/xcshareddata/xcschemes/OctoPodium.xcscheme
@@ -195,7 +195,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "85D320EB1C02062E001B7C7A"
+            BuildableName = "OctoPodium.app"
+            BlueprintName = "OctoPodium"
+            ReferencedContainer = "container:OctoPodium.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
