--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ osx_image: xcode9.3beta
 before_install:
   - pod repo update
 script:
-  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -derivedDataPath build -sdk iphonesimulator ONLY_ACTIVE_ARCH=YES VALID_ARCHS=x86_64 -enableCodeCoverage YES build test | xcpretty -c
+  - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' -scheme OctoPodium -derivedDataPath build -sdk iphonesimulator ONLY_ACTIVE_ARCH=YES VALID_ARCHS=x86_64 -enableCodeCoverage YES GCC_GENERATE_TEST_COVERAGE_FILES=YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES build test | xcpretty -c
 after_success:
   # - bash <(curl -s https://codecov.io/bash) -J 'OctoPodium'
   - bash <(curl -s https://raw.githubusercontent.com/codecov/codecov-bash/04845559fe1caefe990968cc9e3851573012b756/codecov) -J 'OctoPodium'
