Three targets with coverage!

--- a/OctoPodium.xcodeproj/xcshareddata/xcschemes/OctoPodium.xcscheme
+++ b/OctoPodium.xcodeproj/xcshareddata/xcschemes/OctoPodium.xcscheme
@@ -205,6 +205,20 @@
             BlueprintName = "OctoPodium"
             ReferencedContainer = "container:OctoPodium.xcodeproj">
          </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "85D320FF1C02062E001B7C7A"
+            BuildableName = "OctoPodiumTests.xctest"
+            BlueprintName = "OctoPodiumTests"
+            ReferencedContainer = "container:OctoPodium.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "85D3210A1C02062E001B7C7A"
+            BuildableName = "OctoPodiumUITests.xctest"
+            BlueprintName = "OctoPodiumUITests"
+            ReferencedContainer = "container:OctoPodium.xcodeproj">
+         </BuildableReference>
       </CodeCoverageTargets>
       <Testables>
          <TestableReference
