iOS 12 swift 5, making tests work, and adding support for more twitter apps.

--- a/OctoPodium/Supporting Files/Info.plist
+++ b/OctoPodium/Supporting Files/Info.plist
@@ -27,6 +27,7 @@
 		<string>org-appextension-feature-password-management</string>
 		<string>twitter</string>
 		<string>tweetbot</string>
+		<string>twitterrific</string>
 		<string>twit</string>
 		<string>fluttr</string>
 		<string>icebird</string>
