--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ xcode_workspace: OctoPodium.xcworkspace
 xcode_scheme: OctoPodium
 osx_image: xcode10.2
 before_install:
-  - pod repo update
+  # - pod repo update
 script:
   - xcodebuild -workspace OctoPodium.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.2' -scheme OctoPodium -derivedDataPath build -sdk iphonesimulator ONLY_ACTIVE_ARCH=YES VALID_ARCHS=x86_64 -enableCodeCoverage YES GCC_GENERATE_TEST_COVERAGE_FILES=YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES build test | xcpretty -c
 after_success:
